# dmplib

./: CMakeLists.txt  README.md  demo_traj_resampled.csv  demo_trajectory.csv  main.cpp  plot_trajectories.py  rollout_trajectory.csv
include/dmplib/: dmp.hpp
src/: dmp.cpp
